# aoc-2021

haskell/: aoc.cabal
haskell/lib/: AdventOfCode.hs
haskell/lib/AdventOfCode/: Class.hs  Utils.hs
